# HBD

./: .gitignore  AGENTS.md  README.md  agent.md  pyproject.toml  run_case.py  run_gui.py
data/: plant_case_summer_35C.json  plant_case_winter_5C.json
defaults/: defaults.json
docs/: architecture.md  case_schema_v0.2.md  case_schema_v0.3.md
output/: README.md
schema/: case.schema.json
src/ccpp_hbd_solver/: __init__.py  pipeline.py
src/ccpp_hbd_solver/ambient/: __init__.py  ambient_correction.py
src/ccpp_hbd_solver/condenser_loop/: __init__.py  condenser_solver.py
src/ccpp_hbd_solver/gt_block/: __init__.py  gt_solver.py
src/ccpp_hbd_solver/hrsg_block/: __init__.py  hrsg_solver.py
src/ccpp_hbd_solver/plant_summary/: __init__.py  plant_summary.py
src/ccpp_hbd_solver/reporter/: __init__.py  console_reporter.py  diagram_svg.py  excel_reporter.py
src/ccpp_hbd_solver/st_block/: __init__.py  st_solver.py
src/ccpp_hbd_solver/ui/: __init__.py  debouncer.py  diagram_canvas.py  events.py  gui_app.py  model.py  theme.py
src/ccpp_hbd_solver/utils/: __init__.py  physical_props.py  steam_props.py  unit_helpers.py  units.py  warnings.py
