[tool.poetry]
name = "ccpp-hbd-solver"
version = "0.1.0"
description = "Automation toolkit for the CCPP Heat Balance Data solver"
authors = ["Codex <codex@openai.com>"]
readme = "README.md"
packages = [
  { include = "ccpp_hbd_solver", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
coolprop = "^6.6"
iapws = "^1.5"
pint = "^0.24"
openpyxl = "^3.1"
defusedxml = "^0.7"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.6"
black = "^24.3"
mypy = "^1.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
